tests/fixtures/runtime_error_loc.stderr
Error in tests/fixtures/runtime_error_loc.sh2:2:5
Error in tests/fixtures/runtime_error_loc.sh2:2:5
Error in unknown
Error in unknown
Error in unknown
