tests/fixtures/runtime_error_loc.sh2
func foo() {
    run("false")
}

foo()
